--- a/index.html
+++ b/index.html
@@ -108,14 +108,24 @@
         </div>
 
         <!-- Gráficos -->
-        <div class="dashboard-grid mb-6">
-            <!-- Gráfico de Barras -->
+        <div class="dashboard-grid-three mb-6">
+            <!-- Gráfico de Barras por Unidade -->
             <div class="bg-white rounded-lg shadow-md p-6">
                 <h3 class="text-lg font-semibold text-gray-800 mb-4">
                     <i class="fas fa-chart-bar mr-2 text-red-600"></i>Total por Unidade de Saúde
                 </h3>
                 <div class="chart-container-bar">
                     <canvas id="barChart"></canvas>
+                </div>
+            </div>
+
+            <!-- Novo Gráfico de Barras por Mês -->
+            <div class="bg-white rounded-lg shadow-md p-6">
+                <h3 class="text-lg font-semibold text-gray-800 mb-4">
+                    <i class="fas fa-chart-bar mr-2 text-orange-600"></i>Total por Mês
+                </h3>
+                <div class="chart-container-bar">
+                    <canvas id="monthChart"></canvas>
                 </div>
             </div>
 
