--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <!-- Gráfico de Barras por Unidade -->
             <div class="bg-white rounded-lg shadow-md p-6">
                 <h3 class="text-lg font-semibold text-gray-800 mb-4">
-                    <i class="fas fa-chart-bar mr-2 text-red-600"></i>Total por Unidade de Saúde
+                    <i class="fas fa-chart-bar mr-2 text-red-600"></i>Total de Atendimentos por Unidade de Saúde (Distrito)
                 </h3>
                 <div class="chart-container-bar">
                     <canvas id="barChart"></canvas>
@@ -122,7 +122,7 @@
             <!-- Novo Gráfico de Barras por Mês -->
             <div class="bg-white rounded-lg shadow-md p-6">
                 <h3 class="text-lg font-semibold text-gray-800 mb-4">
-                    <i class="fas fa-chart-bar mr-2 text-orange-600"></i>Total por Mês
+                    <i class="fas fa-chart-bar mr-2 text-orange-600"></i>Total de Atendimentos por Mês
                 </h3>
                 <div class="chart-container-bar">
                     <canvas id="monthChart"></canvas>
@@ -132,7 +132,7 @@
             <!-- Gráfico de Rosca -->
             <div class="bg-white rounded-lg shadow-md p-6">
                 <h3 class="text-lg font-semibold text-gray-800 mb-4">
-                    <i class="fas fa-chart-pie mr-2 text-blue-600"></i>Distribuição por Mês
+                    <i class="fas fa-chart-pie mr-2 text-blue-600"></i>Distribuição de Atendimentos por Mês (Distrito)
                 </h3>
                 <div class="chart-container">
                     <canvas id="doughnutChart"></canvas>
@@ -143,7 +143,7 @@
         <!-- Tabela -->
         <div class="bg-white rounded-lg shadow-md p-6">
             <h3 class="text-lg font-semibold text-gray-800 mb-4">
-                <i class="fas fa-table mr-2 text-green-600"></i>Detalhamento por CBO e Unidade
+                <i class="fas fa-table mr-2 text-green-600"></i> Total de Atendimentos - Detalhamento por CBO e Unidade
             </h3>
             <div class="table-container">
                 <table id="dataTable" class="min-w-full table-auto border-collapse">
