--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <!-- Gráfico de Barras por Unidade -->
             <div class="bg-white rounded-lg shadow-md p-6">
                 <h3 class="text-lg font-semibold text-gray-800 mb-4">
-                    <i class="fas fa-chart-bar mr-2 text-red-600"></i>Total de Atendimentos por Unidade de Saúde (Distrito)
+                    <i class="fas fa-chart-bar mr-2 text-red-600"></i>Total de Atendimentos por Unidade de Saúde
                 </h3>
                 <div class="chart-container-bar">
                     <canvas id="barChart"></canvas>
@@ -122,7 +122,7 @@
             <!-- Novo Gráfico de Barras por Mês -->
             <div class="bg-white rounded-lg shadow-md p-6">
                 <h3 class="text-lg font-semibold text-gray-800 mb-4">
-                    <i class="fas fa-chart-bar mr-2 text-orange-600"></i>Total de Atendimentos por Mês
+                    <i class="fas fa-chart-bar mr-2 text-orange-600"></i>Total de Atendimentos por Mês (Distrito)
                 </h3>
                 <div class="chart-container-bar">
                     <canvas id="monthChart"></canvas>
