--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- Painel Valor Total -->
         <div class="valor-total-panel text-center mb-8 py-6 rounded-lg">
             <h3 class="text-2xl font-bold text-white mb-2">Valor Total</h3>
-            <div id="valorTotal" class="text-4xl font-bold text-white">184580</div>
+            <div id="valorTotal" class="text-4xl font-bold text-white">154867</div>
         </div>
 
         <!-- Filtros -->
@@ -66,10 +66,6 @@
                             <div class="multiselect-option" data-value="jun./25">
                                 <input type="checkbox" id="mes_jun" value="jun./25">
                                 <label for="mes_jun">Junho 2025</label>
-                            </div>
-                            <div class="multiselect-option" data-value="jul./25">
-                                <input type="checkbox" id="mes_jul" value="jul./25">
-                                <label for="mes_jul">Julho 2025</label>
                             </div>
                         </div>
                     </div>
@@ -112,7 +108,7 @@
         </div>
 
         <!-- Gráficos -->
-        <div class="dashboard-grid-three mb-6">
+        <div class="dashboard-grid-four mb-6">
             <!-- Gráfico de Barras por Unidade -->
             <div class="bg-white rounded-lg shadow-md p-6">
                 <h3 class="text-lg font-semibold text-gray-800 mb-4">
@@ -130,6 +126,16 @@
                 </h3>
                 <div class="chart-container-bar">
                     <canvas id="monthChart"></canvas>
+                </div>
+            </div>
+
+            <!-- Novo Gráfico de Barras Horizontais por CBO -->
+            <div class="bg-white rounded-lg shadow-md p-6">
+                <h3 class="text-lg font-semibold text-gray-800 mb-4">
+                    <i class="fas fa-chart-bar mr-2 text-green-600"></i>Registros de Atendimentos por CBO (Total)
+                </h3>
+                <div class="chart-container-bar">
+                    <canvas id="cboChart"></canvas>
                 </div>
             </div>
 
